--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,5 +1,8 @@
 .Menu {
-  background-color: red;
+  border-right: 1.33px solid #E5E7EB;
+  background-color: #252526;
+  height: 100vh;
+  width: 34vh;
 }
 .Menu-List {
 }
