--- a/src/components/Menu/ItemList/YourLibraryBtn/YourLibraryBtn.css
+++ b/src/components/Menu/ItemList/YourLibraryBtn/YourLibraryBtn.css
@@ -1,10 +1,14 @@
 .ListBtn{
     display: flex;
     align-items: center;
-    justify-content: center;
     border-radius: 11px;
-    padding: 11px 21px 11px 21px;
+    padding: 5px 21px 5px 21px;
     cursor: pointer;
     margin-top: 15px;
+    min-width: 250px;
+}
 
+.YourLibraryBtn_Text{
+    margin-left: 20px;
+    
 }
