--- a/src/components/Menu/Logo/Logo.scss
+++ b/src/components/Menu/Logo/Logo.scss
@@ -2,10 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &-Text{
+        color: #B4FE17;
+        font-size: 38px;
+        font-weight: 700;
+    }
 }
 
-.LogoText{
-    color: #B4FE17;
-    font-size: 38px;
-    font-weight: 700;
-}
