--- a/src/components/Menu/ItemList/ItemList.scss
+++ b/src/components/Menu/ItemList/ItemList.scss
@@ -3,16 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
 
-.YLBLogo{
-    
-}
-
-.ItemListBr{
-    margin-top: 20px;
-    width: 25vh;
-    border-bottom: 1.33px solid #373737;
+    &-Br{
+        margin-top: 20px;
+        width: 25vh;
+        border-bottom: 1.33px solid #373737;
+    }
 }
 
 .listText{
@@ -21,11 +17,11 @@
     
 }
 
-.btn_Active{
+.btn-Active{
     background-color: #39393B;
     color: #ADFF00;
 }
 
-.btn_unActive{
+.btn-unActive{
     color: #6B7280;
 }
