--- a/src/components/Menu/ItemList/YourLibraryBtn/YourLibraryBtn.scss
+++ b/src/components/Menu/ItemList/YourLibraryBtn/YourLibraryBtn.scss
@@ -1,4 +1,4 @@
-.ListBtn{
+.List-Btn{
     display: flex;
     align-items: center;
     border-radius: 11px;
@@ -8,7 +8,11 @@
     min-width: 250px;
 }
 
-.YourLibraryBtn_Text{
+.YourLibraryBtn-Text{
     margin-left: 20px;
+    
+}
+
+.YLBLogo{
     
 }
