--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -5,11 +5,12 @@
   width: 325px;
   min-width: 34vh;
   
-}
-.Menu-List {
-}
-
-.WelcomeText{
-  margin-top: 60vh;
-  color: #6B7280;
+  &-List {
+    
+  }
+  
+  &-WelcomeText{
+    margin-top: 60vh;
+    color: #6B7280;
+  }
 }
