add header block

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,11 @@
-.Header {
-  background-color: rebeccapurple;
-}
-.Header-Avatar {
+.Header__inner {
+  padding: 26px 50.67px 16px 23px;
+  background-color: var(--black);
+  min-height: 162px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; 
+  flex-direction: column;
+  position: relative;
+  border-bottom: 2px solid #363636;
 }
