--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,26 @@
+:root {
+  --black: #1F1F1F;
+  --gray: #39393b;
+  --green: #b4fe17;
+  --white: #fff;
+
+}
+
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+*ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +34,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
