--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -4,13 +4,18 @@
   min-height: 100vh;
   width: 325px;
   min-width: 34vh;
-  
+  margin-bottom: 117.33px;
+  position: relative;  
   &-List {
     
   }
   
   &-WelcomeText{
-    margin-top: 60vh;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    min-width: 200px;
     color: #6B7280;
   }
 }
