--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,13 +1,12 @@
 .Footer {
-    min-height: 117.33px;
-    max-height: 200px;
+    height: 120px;
     width: 100%;
     padding: 21.33px;
     background-color: var(--black);
     border-top: 1.33px solid var(--green);
-    position: absolute;
-    bottom: 0;
     color: var(--white);
+    z-index: 100;
+    grid-area: footer;
 }
 
 .Footer__inner {
