--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,5 @@
+@import "/src/index.scss";
+
 .Header__inner {
   padding: 26px 50.67px 16px 23px;
   background-color: var(--black);
@@ -8,4 +10,9 @@
   flex-direction: column;
   position: relative;
   border-bottom: 2px solid #363636;
+}
+
+.Header {
+  height: $Footer-height;
+  grid-area: header;
 }
