--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,21 +1,20 @@
+@import "/src/index.scss";
+
 .Menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border-right: 1.33px solid #E5E7EB;
   background-color: #252526;
-  min-height: 100vh;
   width: 325px;
   min-width: 34vh;
-  margin-bottom: 117.33px;
-  position: relative;  
+  position: relative;
+  grid-area: menu;  
   &-List {
     
   }
   
   &-WelcomeText{
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    min-width: 200px;
     color: #6B7280;
   }
 }
