--- a/src/components/Menu/Logo/Logo.scss
+++ b/src/components/Menu/Logo/Logo.scss
@@ -8,5 +8,15 @@
         font-size: 38px;
         font-weight: 700;
     }
+
+    &-circle{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #ADFF00;
+        margin: 5px;
+        padding: 12px;
+        border-radius: 50%;
+    }
 }
 
