--- a/src/components/Footer/TrackInfo/TrackInfoLike/TrackInfoLike.css
+++ b/src/components/Footer/TrackInfo/TrackInfoLike/TrackInfoLike.css
@@ -3,9 +3,11 @@
     background: none;
     margin:  3.5% 18.66px 0 18.66px;
     padding: 0;
+    cursor: pointer;
 }
 
 .TrackInfoLike.active .Like-Icon {
     fill: var(--green);
     stroke: var(--green);
+    
 }
