--- a/src/components/Footer/MusicControl/MusicButtonTopbar/PlayControl/PlayButton/PlayButton.css
+++ b/src/components/Footer/MusicControl/MusicButtonTopbar/PlayControl/PlayButton/PlayButton.css
@@ -1,20 +1,47 @@
 .PlayButton {
-    font-size: 0;
-    background: var(--middlegray);
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    background: none;
     border: none;
     cursor: pointer;
     position: relative;
+    width: 35.8px;
+    height: 35.6px;
 }
 
-.PlayButton::after {
-    content: '';
-    width: 10px;
-    height: 10px; 
-    border-style: solid;
-    border-width: 15px; /* размер и форма */ 
-    border-color: var(--black) transparent transparent var(--black);  /* red — цвет */
-    border-radius: 10px; 
+.PlayButton.active {
+    width: 35.8px;
+    height: 35.6px;
+    background-color: var(--middlegray);
+    border-radius: 50%;
+}
+
+.PlayButton.active::before {
+    content: "";
+    height: 20px;
+    width: 4px;
+    background-color: var(--black);
+    position: absolute;
+    left: 33%;
+    transform: translateX(-33%);
+    top: 8px;
+}
+
+.PlayButton.active::after {
+    content: "";
+    height: 20px;
+    width: 4px;
+    background-color: var(--black);
+    position: absolute;
+    right: 26%;
+    transform: translateX(-26%);
+    top: 8px;
+}
+
+.PlayButton.PlayButton.active:hover {
+    background-color: var(--green);
+}
+
+
+
+.PlayButton.active .PlayButton-Icon {
+    display: none;
 }
