add styles for component TrackRewind

--- a/src/components/Footer/MusicControl/MusicNavigation/RepeatButton/RepeatButton.css
+++ b/src/components/Footer/MusicControl/MusicNavigation/RepeatButton/RepeatButton.css
@@ -2,6 +2,7 @@
     background: none;
     border: none;
     cursor: pointer;
+    margin-left: 42px;
 }
 
 .RepeatButton.active .RepeatButton-Icon {
