--- a/src/components/Footer/MusicControl/MusicNavigation/MusicNavigation.scss
+++ b/src/components/Footer/MusicControl/MusicNavigation/MusicNavigation.scss
@@ -1,5 +1,15 @@
 .MusicNavigation {
     display: flex;
     min-width: 200px;
-    justify-content: space-between;
+    max-width: 750px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.MusicNavigation-buttons {
+    display: flex;
+    justify-content: center;
+    max-width: 250px;
+    margin-bottom: 10px;
 }
